k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-ci-service
spec:
  selector:
    app: node-ci-project
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
