k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-ci-ingress
spec:
  rules:
    - host: node-ci.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-ci-service
                port:
                  number: 80
